tests/error/empty_ptr.gw
#! [contains] EmptyPointerException
var Ptr<~int~> t;
<<< *t >>>;
